fix/ dark mode input text

--- a/src/components/Elements/Forms/InputField/dfns-input-field/dfns-input-field.scss
+++ b/src/components/Elements/Forms/InputField/dfns-input-field/dfns-input-field.scss
@@ -32,6 +32,7 @@
 				background-color: transparent;
 				border: none;
 				outline: none;
+				color: var(--input-core-default-placeholder);
 				&[readonly] {
 					color: var(--color-neutral-500);
 				}
